Summernote: Purify & prettify

--- a/src/Smartstore.Web/wwwroot/lib/editors/summernote/scss/summernote.scss
+++ b/src/Smartstore.Web/wwwroot/lib/editors/summernote/scss/summernote.scss
@@ -463,6 +463,11 @@ $img-margin-right: 10px;
 
     .modal-footer > .btn {
         min-width: 80px;
+        > svg { 
+            height: 16px;
+            color: currentColor;
+            fill: currentColor;
+        }
     }
 }
 
