WCAG: `aria-description` rather than `aria-label` provides instructions for using a search form

--- a/src/Smartstore.Web/Views/Product/Partials/Product.AssociatedProducts.Search.cshtml
+++ b/src/Smartstore.Web/Views/Product/Partials/Product.AssociatedProducts.Search.cshtml
@@ -12,6 +12,7 @@
            name="associatedProductsSearchTerm"
            placeholder="@T("Common.SearchProducts")"
            aria-label="@T("Common.SearchProducts")"
+           aria-description="@T("AriaDescription.AutoSearchBox")"
            data-url="@Url.Action("AssociatedProducts", "Product", new { id = Model.Id })"
            data-target="#associated-products"
            data-origin="Product/AssociatedProducts" />
