--- a/src/Smartstore.Web/Views/Shared/Components/SearchBox/Default.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/SearchBox/Default.cshtml
@@ -8,26 +8,25 @@
            name="q"
            value="@Model.CurrentQuery"
            placeholder="@Model.InputPlaceholder"
-           aria-label="@T("AriaLabel.SearchBox")"
+           aria-label="@Model.InputPlaceholder"
+           aria-description="@T("AriaDescription.InstantSearchBox")"
            data-instasearch="@(Model.InstantSearchEnabled ? "true" : "false")"
            data-minlength="@(Model.SearchTermMinimumLength.ToString())"
            data-showthumbs="@(Model.ShowThumbsInInstantSearch.ToString().ToLower())"
            data-url="@Model.InstantSearchUrl"
            data-origin="@Model.Origin"
             attr-autocomplete='(Model.InstantSearchEnabled, "off")' />
-    
+
     <div class="instasearch-addon d-flex align-items-center justify-content-center">
         <button type="button" class="instasearch-clear input-clear" aria-label="@T("Search.SearchBox.Clear")">
             <i class="fa fa-xmark"></i>
         </button>
     </div>
-
     <span class="input-group-icon instasearch-icon">
         <button type="submit" class="instasearch-submit input-clear bg-transparent" aria-label="@T("Common.Search")">
             <i class="fa fa-magnifying-glass"></i>
         </button>
     </span>
-
     <div class="instasearch-drop">
         <div class="instasearch-drop-body clearfix"></div>
     </div>
