WCAG: Newsletter form

--- a/src/Smartstore.Web/Views/Product/Partials/Product.AssociatedProducts.Search.cshtml
+++ b/src/Smartstore.Web/Views/Product/Partials/Product.AssociatedProducts.Search.cshtml
@@ -6,7 +6,8 @@
 @inject CatalogSettings CatalogSettings
 
 <div sm-if="Model.Products.TotalCount >= (Model.Configuration.SearchMinAssociatedCount ?? CatalogSettings.SearchMinAssociatedProductsCount)" 
-     class="instasearch-form has-icon">
+     class="instasearch-form has-icon"
+     role="search">
     <input type="search"
            class="instasearch-term form-control skip-pd-ajax-update"
            name="associatedProductsSearchTerm"
