WCAG: Comment list

--- a/src/Smartstore.Web/Views/Shared/Partials/Comment.List.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Partials/Comment.List.cshtml
@@ -5,8 +5,8 @@
     return;
 }
 
-<div id="customer-comment-list" class="block comment-list mb-5">
-    <h4 class="block-title comment-list-title">
+<div id="customer-comment-list" class="block comment-list mb-5" role="list" aria-labelledby="customer-comment-list-title">
+    <h4 id="customer-comment-list-title" class="block-title comment-list-title">
         <span>@T("News.Comments")</span>
         <small class="text-muted lrm">(@Model.NumberOfComments)</small>
     </h4>
