--- a/src/Smartstore.Web/Views/Shared/Partials/Comment.Item.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Partials/Comment.Item.cshtml
@@ -1,6 +1,6 @@
 ﻿@model CommentModel
 
-<div class="row comment-item">
+<div class="row comment-item" role="listitem" aria-labelledby="comment-title-@Model.Id">
     <div class="col-auto comment-avatar-col">
         <partial name="Customer.Avatar" model="Model.Avatar" />
     </div>
@@ -20,7 +20,7 @@
                     @Model.CreatedOnPretty
                 </span>
             </div>
-            <h5 sm-if="Model.CommentTitle.HasValue()" class="comment-title fs-h6 font-weight-bold mt-2" dir="auto">
+            <h5 id="comment-title-@Model.Id" sm-if="Model.CommentTitle.HasValue()" class="comment-title fs-h6 font-weight-bold mt-2" dir="auto">
                 @Html.Raw(Model.CommentTitle)
             </h5>
             <p class="comment-body fs-h6 mt-3 mb-0" dir="auto">
