--- a/src/Smartstore.Web/Views/Search/Partials/InstantSearch.TopProducts.cshtml
+++ b/src/Smartstore.Web/Views/Search/Partials/InstantSearch.TopProducts.cshtml
@@ -6,14 +6,14 @@
     var hasThumbs = Model.TopProducts.Items.Any(x => x.Image?.File != null);
 }
 
-<ul class="instasearch-hits@(hasThumbs ? " has-thumbs" : "")">
+<ul class="instasearch-hits@(hasThumbs ? " has-thumbs" : "")" aria-label="@T("Search.Hits")">
     @foreach (var hit in Model.TopProducts.Items)
     {
         <li>
             <a class="instasearch-hit" asp-route="Product" asp-route-SeName="@hit.SeName" asp-area="">
                 <span class="instasearch-hit-wrapper">
                     <span sm-if="hasThumbs && hit.Image?.File != null" class="instasearch-hit-thumb d-block">
-                        <img sm-model="@hit.Image" class="img-fluid" attr-alt='(hit.Image.Alt.IsEmpty(), hit.Name)' />
+                        <img sm-model="@hit.Image" class="img-fluid" alt="" role="presentation" />
                     </span>
                     <span class="d-block text-truncate">
                         <span class="d-block text-truncate" sm-language-attributes-for="hit.Name">
