--- a/src/Smartstore.Web/Views/Shared/Components/SearchBox/Default.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/SearchBox/Default.cshtml
@@ -3,13 +3,16 @@
 @model SearchBoxModel
 
 <form action="@Model.SearchUrl" class="instasearch-form has-icon" method="get" role="search">
+    <span id="instasearch-desc" class="sr-only">
+        @T(Model.InstantSearchEnabled ? "AriaDescription.InstantSearch" : "AriaDescription.SearchBox")
+    </span>
     <input type="search"
            class="instasearch-term form-control text-truncate"
            name="q"
            value="@Model.CurrentQuery"
            placeholder="@Model.InputPlaceholder"
            aria-label="@Model.InputPlaceholder"
-           aria-description="@T(Model.InstantSearchEnabled ? "AriaDescription.InstantSearch" : "AriaDescription.SearchBox")"
+           aria-describedby="instasearch-desc"
            data-instasearch="@(Model.InstantSearchEnabled ? "true" : "false")"
            data-minlength="@(Model.SearchTermMinimumLength.ToString())"
            data-showthumbs="@(Model.ShowThumbsInInstantSearch.ToString().ToLower())"
