WCAG: Made pagination focus visible

--- a/src/Smartstore.Web/wwwroot/lib/bootstrap/scss/_pagination.scss
+++ b/src/Smartstore.Web/wwwroot/lib/bootstrap/scss/_pagination.scss
@@ -25,7 +25,7 @@
 
   &:focus {
     z-index: 3;
-    outline: $pagination-focus-outline;
+    x-outline: $pagination-focus-outline;
     box-shadow: $pagination-focus-box-shadow;
   }
 }
