--- a/src/Smartstore.Web/Views/Shared/Components/LanguageSelector/Default.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/LanguageSelector/Default.cshtml
@@ -11,39 +11,38 @@
     var activeLang = languages.FirstOrDefault(x => x.Id == WorkContext.WorkingLanguage.Id) ?? languages.FirstOrDefault();
 }
 
-<div class="dropdown language-selector">
-    <a class="menubar-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">
-        <span>@activeLang.UniqueSeoCode.ToUpper()</span>
+<div class="dropdown">
+    <button id="language-selector" type="button" class="menubar-link btn btn-link" data-toggle="dropdown" aria-haspopup="listbox" aria-expanded="false">
+        <span aria-hidden="true">@activeLang.UniqueSeoCode.ToUpper()</span>
+        <span class="sr-only">
+            @T("ScreenReaderOnly.LanguageSelector", activeLang.LocalizedShortName)
+        </span>
         <i class="fa fa-angle-down"></i>
-    </a>
-    <div class="dropdown-menu" aria-labelledby="dLabel">
+    </button>
+    @*TODO: (wcag) (mh) Don't forget to set aria-hidden to false, when the "combobox" opens (role=combobox must be set on the opening button) *@
+    <div id="language-options" class="dropdown-menu" aria-labelledby="language-selector" role="listbox" aria-hidden="true">
         @foreach (var localizedUrl in localizedUrls)
         {
             var lang = localizedUrl.Language;
             var name = (bool)ViewBag.DisplayLongName ? lang.Name : lang.ShortName;
             var returnUrl = localizedUrl.Url;
             var href = Display.ModifyQueryString(Url.RouteUrl("ChangeLanguage", new { langid = lang.Id }), "returnUrl=" + returnUrl.UrlEncode());
+            var isSelected = lang.Id == activeLang.Id;
 
-            <a href="@href"
+            <a role="option" attr-aria-selected='(isSelected, "true")' attr-aria-current='(isSelected, "page")' attr-aria-disabled='(isSelected, "false")'
+               href="@href"
                title="@lang.LocalizedName (@lang.UniqueSeoCode.ToUpper())"
                rel="nofollow"
-               class="dropdown-item" attr-class='(lang.Id == activeLang.Id, "disabled")'
-               data-selected="@(lang.Equals(activeLang) ? "true" : "false")"
+               class="dropdown-item" attr-class='(isSelected, "disabled")'
+               data-selected="@(isSelected ? "true" : "false")"
                data-abbreviation="@name">
                 @if (ViewBag.UseImages == true)
                 {
-                    <img src="@Url.Content("~/images/flags/" + lang.FlagImageFileName)" alt="@name" />
+                    //INFO: No alt-Attribute here because there's also a span which already contains the purpose of this link.
+                    <img src="@Url.Content("~/images/flags/" + lang.FlagImageFileName)" role="presentation" />
                 }
                 <span>@name</span>
             </a>
         }
     </div>
 </div>
-
-<script sm-target-zone="scripts" data-origin="language-selector">
-    $(function () {
-        $(".language-selector .dropdown-item.disabled").on('click', function (e) {
-            e.preventDefault();
-        });
-    });
-</script>
