--- a/src/Smartstore.Web/Views/Shared/Components/TopBar/Default.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/TopBar/Default.cshtml
@@ -7,71 +7,72 @@
 <zone name="header_menu_top"></zone>
 
 <nav class="menubar navbar navbar-slide">
-    <ul class="list-unstyled d-lg-flex w-100 mb-0">
-        <li class="menubar-group ml-0">
-            @{
-                @await Component.InvokeAsync("LanguageSelector")
-                @await Component.InvokeAsync("CurrencySelector")
-            }
-        </li>
-        <li class="menubar-group ml-auto">
-            <zone name="header_menu_before" preview-style="max-width: 100px"></zone>
 
-            @if (Model.HasContactUsPage)
-            {
-                <a asp-route="ContactUs" class="menubar-link">@T("ContactUs")</a>
-            }
+    <div class="menubar-group ml-0">
+        @{
+            @await Component.InvokeAsync("LanguageSelector")
+            @await Component.InvokeAsync("CurrencySelector")
+        }
+    </div>
 
-            <menu name="HelpAndService" template="Dropdown" />
+    <div class="menubar-group ml-auto">
+        <zone name="header_menu_before" preview-style="max-width: 100px"></zone>
 
-            @if (Model.IsCustomerImpersonated)
-            {
-                <a asp-route="Logout" class="menubar-link" title="@T("Account.ImpersonatedAs.Finish.Hint")" rel="nofollow">
-                    <i class="fal fa-right-from-bracket menubar-icon"></i>
-                    <span>@WorkContext.CurrentCustomer.Username</span>
-                </a>
-            }
-        </li>
+        @if (Model.HasContactUsPage)
+        {
+            <a asp-route="ContactUs" class="menubar-link">@T("ContactUs")</a>
+        }
 
-        <li class="menubar-group menubar-group--special" sm-suppress-if-empty>
-            @* INFO: (mh) (core) header_menu_special will be used to render News, Blog, etc.
-            ..._after is legacy. Normally one widget zone would be enough but ..._after without content doesn't feel right *@
+        <menu name="HelpAndService" template="Dropdown" />
 
-            <zone name="header_menu_special" preview-style="max-width: 100px"></zone>
-            <zone name="header_menu_special_after" preview-style="max-width: 100px"></zone>
-        </li>
+        @if (Model.IsCustomerImpersonated)
+        {
+            <a asp-route="Logout" class="menubar-link" title="@T("Account.ImpersonatedAs.Finish.Hint")" rel="nofollow">
+                <i class="fal fa-right-from-bracket menubar-icon"></i>
+                <span>@WorkContext.CurrentCustomer.Username</span>
+            </a>
+        }
+    </div>
 
-        <li id="menubar-my-account" class="menubar-group">
-            <div class="dropdown">
-                <a class="menubar-link" attr-data-toggle='(Model.IsAuthenticated, "dropdown")' aria-haspopup="true" aria-expanded="false" href="@accountUrl" rel="nofollow">
-                    <i class="@(Model.IsAuthenticated ? "fas" : "fal") fa-user-circle menubar-icon"></i>
+    <div class="menubar-group menubar-group--special" sm-suppress-if-empty>
+        @* INFO: (mh) (core) header_menu_special will be used to render News, Blog, etc.
+        ..._after is legacy. Normally one widget zone would be enough but ..._after without content doesn't feel right *@
 
-                    @if (Model.IsAuthenticated)
-                    {
-                        <span title="@Model.CustomerEmailUsername">@Model.CustomerEmailUsername.Truncate(25, "...")</span>
-                        <i class="fal fa-angle-down menubar-caret"></i>
-                    }
-                    else
-                    {
-                        <span>@T("Account.Login")</span>
-                    }
-                </a>
+        <zone name="header_menu_special" preview-style="max-width: 100px"></zone>
+        <zone name="header_menu_special_after" preview-style="max-width: 100px"></zone>
+    </div>
+
+    <div id="menubar-my-account" class="menubar-group">
+        <div class="dropdown">
+            <a class="menubar-link" attr-data-toggle='(Model.IsAuthenticated, "dropdown")' aria-haspopup="true" aria-expanded="false" href="@accountUrl" rel="nofollow">
+                <i class="@(Model.IsAuthenticated ? "fas" : "fal") fa-user-circle menubar-icon"></i>
 
                 @if (Model.IsAuthenticated)
                 {
-                    @await Component.InvokeAsync("AccountDropdown")
+                    <span title="@Model.CustomerEmailUsername">@Model.CustomerEmailUsername.Truncate(25, "...")</span>
+                    <i class="fal fa-angle-down menubar-caret"></i>
                 }
-            </div>
-            <zone name="header_menu_after" preview-style="max-width: 100px"></zone>
-        </li>
-
-        <li sm-if="Model.DisplayAdminLink" class="menubar-group menubar-group--special d-none d-xl-block">
-            <a class="menubar-link" asp-area="Admin" asp-controller="Home" asp-action="Index" target="_admin" rel="nofollow">
-                <i class="fal fa-cog menubar-icon"></i>
-                <span>@T("Account.Administration")</span>
+                else
+                {
+                    <span>@T("Account.Login")</span>
+                }
             </a>
-        </li>
-    </ul>
+
+            @if (Model.IsAuthenticated)
+            {
+                @await Component.InvokeAsync("AccountDropdown")
+            }
+        </div>
+        <zone name="header_menu_after" preview-style="max-width: 100px"></zone>
+    </div>
+
+    <div sm-if="Model.DisplayAdminLink" class="menubar-group menubar-group--special d-none d-xl-block">
+        <a class="menubar-link" asp-area="Admin" asp-controller="Home" asp-action="Index" target="_admin" rel="nofollow">
+            <i class="fal fa-cog menubar-icon"></i>
+            <span>@T("Account.Administration")</span>
+        </a>
+    </div>
+
 </nav>
 
 <zone name="header_menu_bottom"></zone>
