--- a/src/Smartstore.Web/wwwroot/shared/_pagination.scss
+++ b/src/Smartstore.Web/wwwroot/shared/_pagination.scss
@@ -80,6 +80,10 @@
     &:active {
         background-color: $gray-300;
     }
+
+    &:focus-visible {
+        @include button-focus-visible();
+    }
 }
 
 .page-item.gap > .page-link {
