--- a/src/Smartstore.Web/wwwroot/lib/bootstrap/scss/_buttons.scss
+++ b/src/Smartstore.Web/wwwroot/lib/bootstrap/scss/_buttons.scss
@@ -60,10 +60,7 @@
   }
 
   &:focus-visible {
-    $ow: cssmax(0px, $btn-focus-width - 1px);
-    outline: #{$ow} solid $input-focus-border-color;
-    outline-offset: calc(#{$ow} * -1);
-    box-shadow: var(--btn-focus-box-shadow);
+    @include button-focus-visible();
   }
 
   &.disabled,
