--- a/src/Smartstore.Web/wwwroot/shared/_variables-shared-bootstrap.scss
+++ b/src/Smartstore.Web/wwwroot/shared/_variables-shared-bootstrap.scss
@@ -258,6 +258,7 @@ $modal-content-box-shadow-sm-up:    var(--box-shadow-lg) !default;
 // Navs
 
 $nav-pills-link-active-color:       $white;
+$nav-link-focus-box-shadow:         none;
 
 
 // Close
