--- a/src/Smartstore.Web/Themes/Flex/wwwroot/_megamenu.scss
+++ b/src/Smartstore.Web/Themes/Flex/wwwroot/_megamenu.scss
@@ -23,62 +23,49 @@ $mixed-megamenu-bg:             $megamenu-bg;
     padding: 0; 
 }
 
+.megamenu-container {
+    --mm-nav-padding-y: 0.5em;
+    --mm-link-padding-y: 0.5em;
+    --mm-link-padding-x: 0.6em;
+    --mm-link-gap: 0;
+    --mm-link-border-radius: var(--border-radius-md);
+    --mm-link-color: #{$megamenu-color};
+    --mm-link-bg-active: #{$header-hover-bg};
+}
+
+.navbar-light > .megamenu-container {
+    // For better specificity
+    --mm-link-color: #{$megamenu-color};
+    --mm-link-bg-active: #{$header-hover-bg};
+} 
+
+.navbar-inverse > .megamenu-container {
+    --mm-link-color: #{$megamenu-inverse-color};
+    --mm-link-bg-active: #{$header-inverse-hover-bg};
+}
+
 .megamenu {
     overflow: hidden;
     position: relative;
     width: 100%;
 
-    .nav-link {
-        font-weight: $font-weight-medium;
-        font-size: $megamenu-navlink-font-size;
-        border-radius: var(--mm-link-border-radius);
-    }
+    // horizontal main navbar
+    .navbar-nav {
+        position: relative;
+        white-space: nowrap;
+        /* overwrites inline width */
+        width: auto !important;
+        transition: margin-inline-start 0.12s ease-in-out;
+        margin-inline-start: 0;
+        line-height: $megamenu-line-height;
+        gap: var(--mm-link-gap);
+        padding-block: var(--mm-nav-padding-y);
 
-    .dropdown-toggle:after {
-        border: none !important;
-        @include fontawesome("\f107", $font-size-base);
-        width: auto;
-        height: auto;
-        vertical-align: middle;
-    }
-}
-
-.navbar-light .megamenu .nav-item {
-    .nav-link { color: $megamenu-color; }
-
-     &.active .nav-link, 
-     .nav-link:focus, 
-     .nav-link:hover { 
-         background: $header-hover-bg;
-     }
-}
-
-.navbar-inverse .megamenu .nav-item {
-    .nav-link { color: $megamenu-inverse-color; }
-
-     &.active .nav-link, 
-     .nav-link:focus, 
-     .nav-link:hover { 
-         background: $header-inverse-hover-bg; 
-     }
-} 
-
-// horizontal main navbar
-.megamenu .navbar-nav {
-    position: relative;
-    white-space: nowrap;
-    /* overwrites inline width */
-    width: auto !important;
-    transition: margin-inline-start 0.12s ease-in-out;
-    margin-inline-start: 0;
-    line-height: $megamenu-line-height;
-    gap: var(--mm-link-gap);
-    padding-block: var(--mm-nav-padding-y);
-
-    &:after {
-        content: "";
-        display: table;
-        clear: both;
+        &:after {
+            content: "";
+            display: table;
+            clear: both;
+        }
     }
 
     .nav-item {
@@ -101,6 +88,12 @@ $mixed-megamenu-bg:             $megamenu-bg;
 
         &:before, &:after {
             content: "";
+        }
+
+        &.active > .nav-link, 
+        > .nav-link:focus, 
+        > .nav-link:hover { 
+            background: var(--mm-link-bg-active);
         }
 
         &.active:before, 
@@ -145,6 +138,21 @@ $mixed-megamenu-bg:             $megamenu-bg;
     .nav-item + .nav-item {
         margin-inline-start: 0;
     }
+
+    .nav-item > .nav-link {
+        font-weight: $font-weight-medium;
+        font-size: $megamenu-navlink-font-size;
+        color: var(--mm-link-color);
+        border-radius: var(--mm-link-border-radius);
+    }
+
+    .dropdown-toggle:after {
+        border: none !important;
+        @include fontawesome("\f107", $font-size-base);
+        width: auto;
+        height: auto;
+        vertical-align: middle;
+    }
 }
 
 .touchevents .megamenu .nav-slider {
@@ -164,7 +172,7 @@ $mixed-megamenu-bg:             $megamenu-bg;
     }
 }
 
-// horizontal navbar navigation buttons
+// Horizontal navbar navigation buttons
 .megamenu-nav {
     position: absolute;
     top: 0;
@@ -212,6 +220,7 @@ $mixed-megamenu-bg:             $megamenu-bg;
         }
     }
 }
+
 .megamenu.megamenu-blend--next .megamenu-nav--next,
 .megamenu.megamenu-blend--prev .megamenu-nav--prev {
     opacity: 1;
@@ -241,12 +250,6 @@ $mixed-megamenu-bg:             $megamenu-bg;
 }
 
 .megamenu-container {
-    --mm-nav-padding-y: 0.5em;
-    --mm-link-padding-y: 0.5em;
-    --mm-link-padding-x: 0.6em;
-    --mm-link-gap: 0;
-    --mm-link-border-radius: var(--border-radius-md);
-
     position: relative;
 
     .mega-menu-dropdown,
@@ -414,25 +417,25 @@ $mixed-megamenu-bg:             $megamenu-bg;
             }
         }
     }
-}
 
-// product rotator 
-.megamenu-container .rotator-container {
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    background: $megamenu-rotator-bg;
-    overflow: hidden;
-	min-height: 320px;
+    // Product rotator 
+    .rotator-container {
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        background: $megamenu-rotator-bg;
+        overflow: hidden;
+	    min-height: 320px;
 
-    .rotator-heading {
-        padding: 0.5rem 0;
-    }
+        .rotator-heading {
+            padding: 0.5rem 0;
+        }
 
-    .rotator-content > div.placeholder {
-        height: 280px;
-        background-color: rgba(255,255,255, 0.85);
+        .rotator-content > div.placeholder {
+            height: 280px;
+            background-color: rgba(255,255,255, 0.85);
 
-        .empty {
-            background-color: transparent;
+            .empty {
+                background-color: transparent;
+            }
         }
     }
 }
@@ -491,8 +494,6 @@ $mixed-megamenu-bg:             $megamenu-bg;
     }
 }
 .megamenu.simple .navbar-nav .nav-item {
-    line-height: 1;
-
     &.active:before {
         border-bottom: 10px solid $dropdown-bg;
     }
