WCAG: Changed resource Ids

--- a/src/Smartstore.Web/Views/Menu/OffCanvas.Home.cshtml
+++ b/src/Smartstore.Web/Views/Menu/OffCanvas.Home.cshtml
@@ -12,7 +12,7 @@
 
 <div class="ocm-home-layer layer" data-id="0" data-depth="0" data-disallow-navigation="@((!allowNavigation).ToString().ToLower())">
     <div class="offcanvas-menu-header offcanvas-tabs" attr-class='(!showTabs, "d-none")'>
-        <ul class="nav nav-tabs nav-tabs-line row no-gutters" role="tablist" aria-label="@T("AriaLabel.OffCanvasMenuTab")">
+        <ul class="nav nav-tabs nav-tabs-line row no-gutters" role="tablist" aria-label="@T("Aria.Label.OffCanvasMenuTab")">
             <li sm-if="showNodes" class="nav-item col">
                 <a id="ocm-tab-menu" class="nav-link" data-toggle="tab" href="#ocm-menu" data-initialized="true"
                    role="tab" aria-controls="ocm-menu" aria-selected="true" tabindex="0">
