--- a/src/Smartstore.Web/Views/Shared/Components/SearchBox/Default.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/SearchBox/Default.cshtml
@@ -4,7 +4,7 @@
 
 <form action="@Model.SearchUrl" class="instasearch-form has-icon" method="get" role="search">
     <span id="instasearch-desc" class="sr-only">
-        @T(Model.InstantSearchEnabled ? "AriaDescription.InstantSearch" : "AriaDescription.SearchBox")
+        @T(Model.InstantSearchEnabled ? "Aria.Description.InstantSearch" : "Aria.Description.SearchBox")
     </span>
     <input type="search"
            class="instasearch-term form-control text-truncate"
