--- a/src/Smartstore.Web/Views/Product/Partials/Product.AssociatedProducts.Search.cshtml
+++ b/src/Smartstore.Web/Views/Product/Partials/Product.AssociatedProducts.Search.cshtml
@@ -13,7 +13,7 @@
            name="associatedProductsSearchTerm"
            placeholder="@T("Common.SearchProducts")"
            aria-label="@T("Common.SearchProducts")"
-           aria-description="@T("AriaDescription.AutoSearchBox")"
+           aria-description="@T("Aria.Description.AutoSearchBox")"
            data-url="@Url.Action("AssociatedProducts", "Product", new { id = Model.Id })"
            data-target="#associated-products"
            data-origin="Product/AssociatedProducts" />
