--- a/src/Smartstore.Web/Views/Shared/Components/LanguageSelector/Default.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/LanguageSelector/Default.cshtml
@@ -15,7 +15,7 @@
     <button id="language-selector" type="button" class="menubar-link btn btn-link" data-toggle="dropdown" aria-haspopup="listbox" aria-expanded="false">
         <span aria-hidden="true">@activeLang.UniqueSeoCode.ToUpper()</span>
         <span class="sr-only">
-            @T("ScreenReaderOnly.LanguageSelector", activeLang.LocalizedShortName)
+            @T("Aria.ScreenReaderOnly.LanguageSelector", activeLang.LocalizedShortName)
         </span>
         <i class="fa fa-angle-down"></i>
     </button>
