Forgot to commit 2 files

--- a/src/Smartstore.Web/Views/Shared/Components/CurrencySelector/Default.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/CurrencySelector/Default.cshtml
@@ -14,7 +14,7 @@
         <span aria-hidden="true">@activeCurr.ISOCode</span>
         <span aria-hidden="true" class="lrm">(@activeCurr.Symbol)</span>
         <span class="sr-only">
-            @T("Aria.ScreenReaderOnly.CurrencySelector", activeCurr.Name)
+            @T("Aria.Label.CurrencySelector", activeCurr.Name)
         </span>
         <i class="fa fa-angle-down"></i>
     </button>
